chg: [ail-training] move to kvrocks

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -991,7 +991,7 @@ cd bin/
     \frametitle{AIL ecosystem: Technologies used}
     \begin{itemize}
         \item[] \textbf{Programming language:} Full python3
-        \item[] \textbf{Databases:} Redis and ARDB
+        \item[] \textbf{Databases:} Redis and ARDB\footnote(We are migrating to kvrocks)
         \item[] \textbf{Server:} Flask
         \item[] \textbf{Data message passing:} ZMQ, Redis list and Redis Publisher/Subscriber
     \end{itemize}
