chg: [training] VM removed

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -844,7 +844,7 @@ curl https://127.0.0.1:7000/api/v1/get/item/default
 \section{Setting up the framework}
 \lstset{style=bash}
 \begin{frame}[fragile]
-    \frametitle{Setting up AIL-Framework from source or virtual machine}
+    \frametitle{Setting up AIL-Framework from source}
     \begin{tcblisting}{colback=black!85,coltext=green,listing only,
         title=Setting up AIL-Framework from source, fonttitle=\bfseries}
 git clone https://github.com/ail-project/ail-framework.git
@@ -952,21 +952,21 @@ cd bin/
 \end{tcblisting}
 \end{frame}
 
-\begin{frame}[fragile]
-    \frametitle{Running your own instance using the virtual machine}
-    \begin{tcblisting}{colback=black!85,coltext=green,listing only,
-        title=Login and passwords:, fonttitle=\bfseries}
-# Web interface (default network settings)
-    https://127.0.0.1:7000/
-# Web interface:
-    admin@admin.test
-    Password1234
-# SSH:
-    ail
-    Password1234
-\end{tcblisting}
+%%\begin{frame}[fragile]
+%%    \frametitle{Running your own instance using the virtual machine}
+%%    \begin{tcblisting}{colback=black!85,coltext=green,listing only,
+%%        title=Login and passwords:, fonttitle=\bfseries}
+%%# Web interface (default network settings)
+%%    https://127.0.0.1:7000/
+%%# Web interface:
+%%    admin@admin.test
+%%    Password1234
+%%# SSH:
+%%    ail
+%%    Password1234
+%%\end{tcblisting}
 
-\end{frame}
+%\end{frame}
 
 \begin{frame}[fragile]
     \frametitle{Updating AIL}
