chg: [ail-training] typo fixed

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -267,7 +267,7 @@
 			        \begin{itemize}
 
          \item authentication mechanisms between peers,
-         \item openGPG can leak a lot of metadata
+         \item OpenGPG can leak a lot of metadata
         \begin{itemize}
           \item key ids,
           \item subject of email in thunderbird,
