chg: [slide] feeders added

--- a/1-ail-introduction/feeder.tex
+++ b/1-ail-introduction/feeder.tex
@@ -36,3 +36,36 @@
     \end{itemize}
 \end{frame}
 
+\begin{frame}[fragile]
+    \frametitle{AIL LeakFeeder}
+    \begin{itemize}
+        \item ail-feeder-leak\footnote{\url{https://github.com/ail-project/ail-feeder-leak}} automates the process to feed leaked large files automatically to AIL
+    \end{itemize}
+    \includegraphics[scale=0.20]{./images/ail-feeder-leak.png}
+\end{frame}
+
+\begin{frame}[fragile]
+    \frametitle{AIL feeder ActivityPub}
+    \begin{itemize}
+        \item ail-feeder-activity-pub\footnote{\url{https://github.com/ail-project/ail-feeder-activity-pub}} is feeder for the ActivityPub standard used in distributed social networks
+        \item Accounts are required on the ActivityPub instance to get the stream
+    \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+    \frametitle{AIL feeder telegram}
+    \begin{itemize}
+        \item ail-feeder-telegram\footnote{\url{https://github.com/ail-project/ail-feeder-telegram}} is a {\bf Telegram feeder}
+        \item An API ID/hash for Telegram is required and linked to your Telegram phone number
+    \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+    \frametitle{More feeders}
+    \begin{itemize}
+        \item ail-feeder-discord\footnote{\url{https://github.com/ail-project/ail-feeder-discord}} is a generic {\bf Discord} feeder for AIL
+        \item ail-feeder-atom-rss\footnote{\url{https://github.com/ail-project/ail-feeder-atom-rss}} is an {\bf Atom and RSS reader} and feeder for AIL   
+        \item ail-feeder-jsonlogs\footnote{\url{https://github.com/ail-project/ail-feeder-jsonlogs}} is a {\bf JSON aggregator} to submit generic JSON input into AIL
+    \end{itemize}
+\end{frame}
+
