chg: [training] updated

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -1148,7 +1148,7 @@ if __name__ == '__main__':
             \item {\bf Gradual changes} in AIL to add required functionalities to support the objectives.
             \item {\bf Time-memory trade-off} can be challenging to ensure a functional framework.
             \item Evaluation and integration of new modules in AIL based on time-memory comparisons.
-            \item Semantic aspects (task with Corexalys) are challenging due to the diverse data sources, unstructured data and languages seen.
+            \item Semantic aspects are challenging due to the diverse data sources, unstructured data and languages seen.
     \end{itemize}
 \end{frame}
 
