--- a/1-ail-introduction/conti.tex
+++ b/1-ail-introduction/conti.tex
@@ -23,25 +23,25 @@
 
 \begin{frame}[fragile]                                                                                                                        
 
-   \frametitle{Feeding AIL with custom JSON}
+   \frametitle{Feeding AIL with Conti leaks}
 
         \begin{itemize}
-		\item Good candidate for AIL analysis:
+		\item Conti jabber leaks are a good candidate for AIL analysis:
         	\begin{itemize}
 			\item PGP keys
-			\item bitcoins addresses, maybe others,
+			\item Bitcoin addresses, maybe others,
 			\item onion hidden services
         	\end{itemize}
                 \item first we translated the files on english using deepl.com 
-		\item modified AIL to interpret jabber ids as usernames,
-		\item then we created a feeder to import json data in AIL
+		\item Support added in AIL to interpret jabber ids as usernames,
+		\item then we created a feeder to import json data in AIL.
         \end{itemize}
 
 \end{frame}
 
 
 \begin{frame}[fragile]                                                                                                                        
-   \frametitle{Feeding AIL with custom JSON}
+   \frametitle{Feeding AIL with Conti leaks}
 	\lstinputlisting[language=Python]{feeder.py}
 
 	\begin{lstlisting}[language=bash]
@@ -52,20 +52,20 @@
 
 \begin{frame}[fragile]                                                                                                                        
 
-   \frametitle{Feeding AIL with custom JSON}
+\frametitle{Feeding AIL with Conti leaks}
 
+    \begin{itemize}
+    \item use grep to limit the noise on an instance by only sending interesting bits:
         \begin{itemize}
-		\item use grep to limit the noise on an instance by only sending interesting bits:
-        	\begin{itemize}
-			\item PGP keys
-	\begin{lstlisting}[language=bash]
-	$ cat ~/conti/* | jq . -c | grep PGP | python ./feeder.py
-	\end{lstlisting}
-			\item onion hidden services \texttt{| grep http:// |}
-			\item telegram addresses \texttt{| grep tg:// | }
-			\item bitcoins addresses \texttt{| egrep --regexp="[13][a-km-zA-HJ-NP-Z1-9]{25,34}" | }
+        \item PGP keys
+\begin{lstlisting}[language=bash]
+$ cat ~/conti/* | jq . -c | grep PGP | python ./feeder.py
+\end{lstlisting}
+        \item onion hidden services \texttt{| grep http:// |}
+        \item telegram addresses \texttt{| grep tg:// | }
+        \item bitcoins addresses \texttt{| egrep --regexp="[13][a-km-zA-HJ-NP-Z1-9]{25,34}" | }
 
-        	\end{itemize}
         \end{itemize}
+    \end{itemize}
 
 \end{frame}
